--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
 	<title>O-Auth Demo</title>
+	<script src="lib/angular/angular.min.js"></script>
+	<script src="lib/angular-route/angular-route.min.js"></script>
+	<script src="script.js"></script>
 </head>
 <body>
-<a href="/authorize">Sign In with Google</a>
+	<div ng-view></div>
 </body>
+
+<script type="text/ng-template" id="guest">
+  Guest View
+  <div>
+  	<a href="#/login">Login</a>
+  </div>
+</script>
+
+<script type="text/ng-template" id="custom">
+  Custom View
+  <div>
+  	Hi User
+  </div>
+</script>
+
+<script type="text/ng-template" id="login">
+  <a href="/authorize">Sign In with Google</a>
+</script>
+
 </html>
