--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 <script type="text/ng-template" id="guest">
   Guest View
   <div>
-  	<a href="#/login">Login</a>
+  	<a href="#login">Login</a>
   </div>
 </script>
 
